much needed styling update

--- a/_posts/2024-03-26-lose-lose-lose-lose.html
+++ b/_posts/2024-03-26-lose-lose-lose-lose.html
@@ -4,9 +4,9 @@ title: Lose Lose Lose Lose
 date: 2024-03-26
 tags: despair
 ---
-<h2>Any way I lose</h2>
+<p class="has-drop-cap">It's not super often that a day goes from okay to complete shit in one sentence. We were laying in bed and K was watching Handmaids Tale. She suddenly asks me what our plans are if martial law is declared and the world starts to end. I try to tell her I don't have a plan. This upsets her. Clearly I don't care enough about the family to plan for this doomsday scenario. Then she gets upset that I can't come up with a plan on the spot (another example of "I don't know" and then "well, okay, but..."). When I try to explain to her that the odds of that happening are very low, suddenly I am gaslighting her and invalidating her concerns. It's at this point I realize I am in a Lose Lose Lose Lose situation.</p>
 <quote>"If Donald Trump wins the election and declares martial law, whats our plan?"</quote>
-<p>It's not super often that a day goes from okay to complete shit in one sentence. We were laying in bed and K was watching Handmaids Tale. She suddenly asks me what our plans are if martial law is declared and the world starts to end. I try to tell her I don't have a plan. This upsets her. Clearly I don't care enough about the family to plan for this doomsday scenario. Then she gets upset that I can't come up with a plan on the spot (another example of "I don't know" and then "well, okay, but..."). When I try to explain to her that the odds of that happening are very low, suddenly I am gaslighting her and invalidating her concerns. It's at this point I realize I am in a Lose Lose Lose Lose situation.</p>
+<h2>Any way I lose</h2>
 <h3>I lose #1</h3>
 <p>She's upset that I haven't planned for the Handmaids Tale scenario. I don't care enough for our family to clearly plot out what happens when a dictator comes to power and relegates all women to either be brood mares for the state or subserviant wives. Apparently I was supposed to already have a go-bag packed so we can flee to Canada the day after the election.</p>
 <h3>I lose #2</h3>
