--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <article class="blog-post">
       <header>
         <h2>{{ post.title }}</h2>
-        <h3>{{ post.date | date: "%B %-d, %Y" }}</h3>
+        <h3 class="blog-post-date">{{ post.date | date: "%B %-d, %Y" }}</h3>
         <div class="feelings">
           {% for tag in post.tags %}
             <span>{{ tag }}</span>
