Content updates and design exploration

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+<div class="jeep-container">
+  <h2>All paint options</h2>
+  <section class="paint-chips">
+    {% include jeep-data/all-paint.html %}
+  </section>
+</div>
 <section class="stripe-container">
   <section class="stripe odd" id="stripe97">
     <h2 class="year" onclick="openContent(event, 'entry97')">1997</h2>
